--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=YOUR_PORT
 MONGO_URL=YOUR_DB_URL
+SECRET_KEY=YOUR_SECRET_KEY
+CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API_KEY
+CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
