--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Kuntal Saha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
     "npx": "^10.2.2"
   },
   "devDependencies": {
