--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SECRET_KEY=YOUR_SECRET_KEY
 CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
 CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API_KEY
 CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
+JWT_SECRET=YOUR_SECRET_KEY
