--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
-    "npx": "^10.2.2"
+    "npx": "^10.2.2",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
