--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon src/server.js"
+    "dev": "npx nodemon src/server.js",
+    "prod": "node dist/server.js",
+    "build": "babel src --out-dir dist",
+    "lint": "eslint \"src/**/*.js\""
   },
-  "author": "Kuntal Saha",
+  "author": "Ayush Sharma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -24,6 +27,12 @@
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.0"
   }
 }
