--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "npx": "^10.2.2",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
