refractor: modularised codebase structure and added passport dependencies.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,23 @@
-PORT=YOUR_PORT
-MONGO_URL=YOUR_DB_URL
-SECRET_KEY=YOUR_SECRET_KEY
-CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
-CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API_KEY
-CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
-JWT_SECRET=YOUR_SECRET_KEY
+PORT=8080
+SECRET_KEY=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+NODE_ENV=development
+DB_URL=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
+DB_HOST=
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=1d
+GMAIL_USER=
+GMAIL_PASSWORD=
+SESSION_SECRET=
+OAUTH2_CLIENT_ID=
+OAUTH2_CLIENT_SECRET=
+RZP_KEY_ID=
+RZP_KEY_SECRET=
+CLIENT_URL='http://localhost:5173'
+CORS_ORIGIN='http://localhost:5173'
