--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon src/server.js",
+    "dev": "cross-env NODE_ENV=development npx nodemon src/server.js",
     "prod": "node dist/server.js",
     "build": "babel src --out-dir dist",
     "lint": "eslint \"src/**/*.js\""
@@ -15,15 +15,20 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "npx": "^10.2.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -33,8 +38,10 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@eslint/js": "^9.8.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.3.3"
   }
 }
