--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm-run-all --aggregate-output cov:clean -p cov:unit cov:integration -s cov:summary-preset cov:report",
+    "test:integration": "npm-run-all cov:clean cov:integration",
+    "test:unit": "npm-run-all cov:clean cov:unit",
+    "cov:clean": "rimraf .nyc_output && rimraf coverage",
+    "cov:unit": "jest --forceExit --colors -c jest.config.unit.js",
+    "cov:integration": "jest -runInBand --forceExit --colors -c jest.config.integration.js",
+    "cov:summary-preset": "mkdir .nyc_output && cp coverage/unit/coverage-final.json .nyc_output/unit.json && cp coverage/integration/coverage-final.json .nyc_output/integration.json",
+    "cov:report": "nyc report --reporter html --reporter lcov --report-dir ./coverage/summary",
     "dev": "npx nodemon src/server.js",
     "prod": "node dist/server.js",
     "build": "babel src --out-dir dist",
@@ -23,7 +30,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
-    "npx": "^10.2.2",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -31,10 +37,16 @@
   "devDependencies": {
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-env": "^7.25.4",
     "@eslint/js": "^9.8.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "@jest/globals": "^29.3.1",
+    "jest": "^29.3.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "rimraf": "^5.0.1" 
   }
 }
