--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       #       token: ${{ secrets.SONAR_TOKEN }}
 
       - name: Repo Scanning (Trivy)
-        uses: aquasecurity/trivy-action@v0.24.0
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: "fs"
           format: "table"
@@ -50,7 +50,7 @@ jobs:
           docker build -t xcoder420/bloginary .
 
       - name: Image Scanning (Trivy)
-        uses: aquasecurity/trivy-action@v0.11.0
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: "image"
           image-ref: "xcoder420/bloginary"
