--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,27 @@ on:
       - master
 
 jobs:
-  build:
+  checkout:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+  repo_scanning:
+    runs-on: ubuntu-latest
+    needs: build
 
+    steps:
+      - name: Repo Scanning (Trivy)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "fs"
+          format: "table"
+  setup:
+    runs-on: ubuntu-latest
+    needs: checkout
+
+    steps:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -26,29 +40,36 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+  build:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
       - name: Build Project
         run: npm run build
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Run Unit Tests
         run: npm run test:unit
 
-      #   - name: Run Static Code Analysis (SonarCloud)
-      #     uses: sonarsource/sonarcloud-github-action@v2
-      #     with:
-      #       projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-      #       organization: ${{ secrets.SONAR_ORGANIZATION }}
-      #       token: ${{ secrets.SONAR_TOKEN }}
+  docker_build:
+    runs-on: ubuntu-latest
+    needs: build
 
-      - name: Repo Scanning (Trivy)
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: "fs"
-          format: "table"
-
+    steps:
       - name: Build Docker Image
         run: |
           docker build -t xcoder420/bloginary .
 
+  image_scanning:
+    runs-on: ubuntu-latest
+    needs: docker_build
+
+    steps:
       - name: Image Scanning (Trivy)
         uses: aquasecurity/trivy-action@master
         with:
@@ -56,6 +77,11 @@ jobs:
           image-ref: "xcoder420/bloginary"
           format: "table"
 
+  docker_push:
+    runs-on: ubuntu-latest
+    needs: [docker_build, image_scanning]
+
+    steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
