--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,7 @@ on:
       - master
 
 jobs:
-  build:
+  pr:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
       - name: Run Unit Tests
-        run: npm test:unit
+        run: npm run test:unit
 
       #   - name: Run Static Code Analysis (SonarCloud)
       #     uses: sonarsource/sonarcloud-github-action@v2
